--- a/styles/posts.css
+++ b/styles/posts.css
@@ -10,28 +10,29 @@ body, html {
 #topbtn {
     display: none;
     position: fixed;
-    padding: 15px 20px;
-    right: 60px;
+    padding: 8px 14px 2px;
+    right: .7em;
     bottom: 20px;
     z-index: 99;
     border: none;
     border-radius: 10px;
     outline: none;
     cursor: pointer;
-    border: 2px solid #000000;
+    border: 2px solid #f0f0f010;
     border-radius: 20px;
     /* frost effect */
     box-shadow: 0 0 1rem 0 rgba(0, 0, 0, 0.02);	
-    background-color: #1919198f;
+    background-color:#191919;
     backdrop-filter: blur(1px);
+    opacity: 80%;
     /* typography */
-    color: #e2e2e2;
-    font-size: 22px;
-    font-family: 'Poppins', sans-serif;
-    font-weight: 600;
+    color: #f0f0f0;
+    font-size: 24px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 800;
 }
     #topbtn:hover {
-        background-color: #555;
+        background-color: #242424;
     }
 
 /*
@@ -335,7 +336,54 @@ body, html {
 .footer-container {
     grid-area: 'content';
     background-color: #191919;
+    text-align: center;
 }
+    .more-posts-container {
+        padding-top: 15px;
+    }
+    
+    .bp-container {
+        display: grid;
+        grid-template-areas:
+          'bp-title'
+          'date-auth';
+        grid-template-rows: 1fr 0fr;
+        width: fit-content;
+        margin: 15px auto;
+        padding: 8px;
+        border: 2.5px solid #ffffff20;
+        border-radius: 16px;
+    }
+        .bp-title {
+            grid-area: 'bp-title';
+            /* typography */
+            color:#f0f0f0;
+            font-family: 'Poppins', sans-serif;
+            font-size: 13px;
+            font-weight: 500;
+            text-decoration: none;
+            scale: 1;
+            transition: color .4s, scale .4s;
+        }
+        .bp-date-author {
+            grid-area: 'date-auth';
+            height: fit-content;
+            /* typography */
+            color: #f0f0f0;
+            font-family: 'Poppins', sans-serif;
+            font-size: 12px;
+            font-weight: 100;
+            font-style: italic;
+            text-decoration: none;
+            scale: 1;
+            transition: color .4s, scale .4s;
+        }
+            .bp-container:hover, .bp-container:hover > .bp-title, .bp-container:hover > .bp-date-author {
+                /* color: #b8b8b8; */
+                opacity: 80%;
+                scale: 1.02;
+                transition: all .4s;
+            }
     
 /*
     SOCIALS GRID CONTAINER
@@ -348,27 +396,35 @@ body, html {
     width: fit-content;
     margin-left: auto;
     margin-right: auto;
-    padding: 10px;
+    padding: 15px;
 }
     .social {
         grid-area: 'github';
         width: fit-content;
-        height: 50px;
-        width: 50px;
+        height: 55px;
+        width: 55px;
         margin: 0;
         transition: scale .2s;
+        filter: invert(.9);
+        /* background-color: #ffffff; */
+        /* border: 5px solid black; */
+        border-radius: 1000px;
     }
-    .social:hover {
-        scale: 1.2;
+    .github, .email {
+        transition: scale .3s;
+    }
+    .github:hover, .email:hover {
+        scale: 1.3;
+        transition: scale .3s;
     }
 
-    #linkedin {
+    .linkedin {
         grid-area: 'linkedin';
         scale: 1.2;
         transition: scale .3s;
     }
-    #linkedin:hover {
-        scale: 1.4;
+    .linkedin:hover {
+        scale: 1.5;
     }
 
 /*
@@ -382,3 +438,16 @@ body, html {
     width: 20px;
     grid-area: 'spacer-w20';
 }
+.line-spacer {
+    background-color: #f0f0f010;
+    width: 10%;
+    height: 5px;
+    margin: 2px auto;
+    border-radius: 100px;
+}
+
+.frost {
+    box-shadow: 0 0 1rem 0 rgba(0, 0, 0, 0.02);	
+      background-color: rgba(255, 255, 255, 0.08);
+      backdrop-filter: blur(10px);
+  }
