--- a/styles/index.css
+++ b/styles/index.css
@@ -33,20 +33,21 @@ p {
   grid-template-areas:
     'logo titles';
   grid-template-columns: 0fr 1fr;
-  padding-bottom: 10px;
+  padding: 4px 6px;
   border-bottom-left-radius: 8px;
   border-bottom-right-radius: 8px;
+  background-color: #191919;
 }
 
 /* header logo */
-.header-logo-container {
+/* .header-logo-container {
   grid-area: 'logo';
 }
   .header-logo {
     width: 110px;
     height: 110px;
     padding: 10px;
-  }
+  } */
 
 /* header titles */
 .header-titles-grid-container {
@@ -58,6 +59,7 @@ p {
   grid-area: 'titles';
   margin-top: auto;
   margin-bottom: auto;
+  padding: 15px;
 }
   .header-title {
     margin-bottom: -15px;
@@ -68,21 +70,21 @@ p {
       /* typography */
       color: #f0f0f0;
       font-family: 'Open Sans', sans-serif;
-      font-size: 80px;
+      font-size: 50px;
       font-weight: 800;
       text-decoration: none;
-    }
-    /* header sub-title text */
-    .header-sub-title-text {
+  }
+  /* header sub-title text */
+  .header-sub-title-text {
       grid-area: 'header-sub-title';
       /* typography */
       color: #f0f0f0;
       font-family: 'Open Sans', sans-serif;
-      font-size: 18px;
+      font-size: 12px;
       font-weight: 500;
       font-style: italic;
       text-decoration: none;
-    }
+  }
 
 /*
   CONTENT CONTAINER
@@ -236,6 +238,7 @@ p {
       height: 50px;
       width: 50px;
       margin: 0;
+      filter: invert(.9);
       transition: scale .2s;
     }
       .social:hover {
